# ChangeLog for x11-libs/rep-gtk
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/x11-libs/rep-gtk/ChangeLog,v 1.12 2002/12/17 22:55:48 agriffis Exp $

  17 Dec 2002; Aron Griffis <agriffis@gentoo.org> rep-gtk-0.17.ebuild :
  Added ~alpha to KEYWORDS

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*rep-gtk-0.17 (17 Nov 2002)

  19 Nov 2002; phoen][x <phoenix@gentoo.org> rep-gtk-0.17 :
  Put this ebuild into the stable profile.

  17 Nov 2002; phoen][x <phoenix@gentoo.org> rep-gtk-0.17,
  files/digest-rep-gtk-0.17 :
  Version bump - needed for sawfish-1.2.

rep-gtk-0.15-r3 (3 Sep 2002)
  
  20 Oct 2002; Calum Selkirk <cselkirk@gentoo.org> rep-gtk-0.15-r3.ebuild :

  Added ppc to KEYWORDS.

  3 Sep 2002; Spider <spider@gentoo.org> rep-gtk-0.15-r3.ebuild :
  I did not add this ebuild, but I can't find a changelog for it either.
  modified the libglade dep some to use the old version (correct version)
  
*rep-gtk-0.16 (24 Jun 2002)
  24 Jun 2002; Martin Schlemmer <azarah@gentoo.org> :
  Latest gtk-2.0 version.  Slotified all the ebuilds, as 0.15 is gtk-1.2, where
  0.16 is gtk-2.0.
                          
*rep-gtk-20020612 (12 Jun 2002)                 
  12 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> rep-gtk-20020612.ebuild :
  new snapshot

*rep-gtk-20020524-r1 (09 Jun 2002)
  09 Jun 2002; Gabriele Giorgetti <stroke@gentoo.org> rep-gtk-20020524-r1.ebuild :
  Modified and added deps. "Workaorund" to #3528 :)

*rep-gtk-20020524 (27 May 2002) 
  27 May 2002; Spider <spider@gentoo.org> rep-gtk-20020524.ebuild :
  new snapshot version


*rep-gtk-20020502-r1 (22 May 2002) 
  22 May 2002; Spider <spider@gentoo.org> rep-gtk-20020502-r1.ebuild :
  phase in Gnome2 stuff
  latest & greatest

*rep-gtk-20020419.ebuild  (22 May 2002)
  22 May 2002; Spider <spider@gentoo.org> rep-gtk-20020419.ebuild 
  phase in Gnome2 stuff
 
*rep-gtk-0.15-r2 (1 Feb 2002)
