@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/rep-gtk/rep-gtk-0.15-r3.ebuild,v 1.11 2002/12/09 04:41:49 manson Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/rep-gtk/rep-gtk-0.15-r3.ebuild,v 1.12 2002/12/31 18:55:50 chouser Exp $
 
 IUSE="gnome"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://rep-gtk.sourceforge.net/"
 
 SLOT="1.2"
 LICENSE="GPL-2"
-KEYWORDS="x86 sparc  ppc"
+KEYWORDS="x86 sparc ppc alpha"
 
 DEPEND="=x11-libs/gtk+-1.2*
 	>=dev-libs/librep-0.13.4
