@@ -1,6 +1,6 @@
 # Copyright 1999-2002 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/sawfish-1.0.1-r6.ebuild,v 1.4 2002/12/09 04:42:03 manson Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/sawfish/sawfish-1.0.1-r6.ebuild,v 1.5 2002/12/31 18:55:50 chouser Exp $
 
 IUSE="gtk nls esd gnome"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://sawmill.sourceforge.net/"
 
 SLOT="0"
 LICENSE="GPL-2"
-KEYWORDS="x86 sparc  ppc"
+KEYWORDS="x86 sparc ppc alpha"
 
 DEPEND="=x11-libs/rep-gtk-0.15*
 	>=dev-libs/librep-0.14
